--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,7 +1,26 @@
-{% block title %}Les produits
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            {% block title %}Les produits
+            {% endblock %}
+        </title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous"/>
+        {% endblock %}
+    </head>
+
 
 {% block body %}
+    {% block message %}
+            {% for succes in app.flashes('succes') %}
+                <div class="danger alert alert-danger">
+                    {{ succes }}
+                </div>
+            {% endfor %}
+    {% endblock %}    
     <div class="bg-light p-3">
         <h1>Les produits</h1>
     </div>
@@ -16,11 +35,22 @@
                         {{ produits.prix }}
                         €
                     </h2>
-                    <img class="img-fluid rounded" src="{{ produits.image }}" alt="Image de {{ produits.nom }}">
+                    <img class="img-fluid rounded" src="{{ asset('img/') }} {{ produits.image }}" alt="Image de {{ produits.nom }}">
                     <hr>
                     <a href="{{ path('panier_add', {'id': produits.id}) }}" class="btn btn-success float-right">
                         <i class="fas fa-shopping-cart mr-1"></i>
                         Ajouter
+                    </a>
+                    <a href="{{ path('produits_like', {'id': produits.id}) }}" class="btn btn-link js-like">
+                        {% if app.user and produits.isLikedByUser(app.user) %}
+                            <i class="fas fa-thumbs-up"></i>
+                        {% else %}
+                            <i class="far fa-thumbs-up"></i>
+                        {% endif %}
+                        
+                        
+                        <span class="js-likes">{{ produits.likes | length }}</span>
+                        <span class="js-label">J'aime</span>
                     </a>
                 </div>
 
@@ -28,3 +58,38 @@
         {% endfor %}
     </div>
 {% endblock %}
+{% block javascripts %}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        function onClickBtnLike(event){
+            event.preventDefault();
+
+            const url = this.href;
+            const spanCount = this.querySelector('span.js-likes');
+            const icone = this.querySelector('i');
+
+            axios.get(url).then(function(response){
+                spanCount.textContent = response.data.likes;
+
+                if(icone.classList.contains('fas')){
+                     icone.classList.replace('fas', 'far');
+                }
+                else{
+                    icone.classList.replace('far', 'fas');
+                }
+            }).catch(function(error){
+                if(error.response.status === 403){
+                    window.alert("Vous ne pouvez pas liker un article si vous n ete pas connecté")
+                }
+                else {
+                    window.alert("une erreur c est produite veuillez essayer plus tard")
+                }
+            })
+        }
+
+        document.querySelectorAll('a.js-like').forEach(function(link){
+            link.addEventListener('click', onClickBtnLike);
+        })
+    </script>
+{% endblock %}
+</html>
