--- a/public/css/style.css
+++ b/public/css/style.css
@@ -433,6 +433,11 @@ body {
     background-color: rgba(255, 255, 255, 0.05);
     transform: translateY(-3px); }
 
+
+    .imgpanier{
+      width: 100px;
+      height: 100px;
+    }
 .copyright {
   font-size: 1.4rem;
   color: #aaa;
