--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -11,7 +11,10 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous"/>
+            <link rel="stylesheet" href="{{asset ('css/style.css')}}">
+            
         {% endblock %}
+         
     </head>
 
 {% block body %}
@@ -19,6 +22,7 @@
     <div>
         <h1>Votre panier</h1>
     </div>
+    
     <!-- si le panier n'est pas vide (verification de la taille de items)  -->
     {% if items | length > 0 %}
         <table class="table">
@@ -37,13 +41,16 @@
                 {% for item in items %}
                     <tr>
                         <td>{{ item.produits.nom }}</td>
-                        <td>{{ item.produits.image }}</td>
+                        <td> <img class="imgpanier" src="{{asset('img/')}}{{item.produits.image}}"/> </td>
                         <td>{{ item.produits.description }}</td>
                         <td>{{ item.produits.prix }}</td>
                         <td>{{ item.quantity }}</td>
                         <td>{{ item.produits.prix * item.quantity }}</td>
                         <td>
-                            <a href="{{ path('panier_subtract', {'id': item.produits.id}) }}" class="btn">Enlever un article</a>
+                            <a href="{{ path('panier_subtract', {'id': item.produits.id}) }}" class="btn" > <img src="{{ asset ('img/moins.png') }}"/> </a>
+
+                            <a href="{{ path('panier_add', {'id': item.produits.id}) }}" class="btn"><img src="{{ asset ('img/plus.png') }}"/></a>
+
                         </td>
                         <td>
                             <a href="{{ path('panier_remove', {'id': item.produits.id}) }}" class="btn btn-danger btn-sm">
