--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -120,6 +120,19 @@
 {% endblock %}
 
 {% block main %}    <!-- banner part start-->
+
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success" role="alert">
+        {{ message }}
+    </div>
+{% endfor %}
+
+{% for message in app.flashes('error') %}
+    <div class="alert alert-warning" role="alert">
+        {{ message }}
+    </div>
+{% endfor %}
+
     <section class="banner_part">
         <div class="container">
             <div class="row align-items-center">
@@ -382,27 +395,8 @@
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-lg-8">
-                        <div class="footer_menu">
-                            <div class="footer_logo">
-                                <a href="{{ asset ('index.html')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a>
-                            </div>
-                            <div class="footer_menu_item">
-                                <a href="{{ asset ('index.html')}}">Home</a>
-                                <a href="{{ asset ('about.html')}}">About</a>
-                                <a href="{{ asset ('product_list.html')}}">Products</a>
-                                <a href="{{ asset ('#')}}">Pages</a>
-                                <a href="{{ asset ('blog.html')}}">Blog</a>
-                                <a href="{{ asset ('contact.html')}}">Contact</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="social_icon">
-                            <a href="{{ asset ('#')}}"><i class="fab fa-facebook-f)'"></i></a>
-                            <a href="{{ asset ('#')}}"><i class="fab fa-instagram'"></i></a>
-                            <a href="{{ asset ('#')}}"><i class="fab fa-google-plus-g'"></i></a>
-                            <a href="{{ asset ('#')}}"><i class="fab fa-linkedin-in'"></i></a>
-                        </div>
+                      
+                   
                     </div>
                 </div>
             </div>
