--- a/templates/pirate/login.html.twig
+++ b/templates/pirate/login.html.twig
@@ -1,138 +1,133 @@
-
-
-
 {% extends "base.html.twig" %}
+{% block head %}
 	<head>
-		<!-- Required meta tags -->
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>L'arômes des sens</title>
 		<link
-		rel="icon" href="{{ asset ('img/tree.png')}}">
-		<!-- Bootstrap CSS -->
+				rel="icon" href="{{ asset ('img/tree.png') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/bootstrap.min.css')}}">
-		<!-- animate CSS -->
+				rel="stylesheet" href="{{ asset ('css/bootstrap.min.css') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/animate.css')}}">
-		<!-- owl carousel CSS -->
+				rel="stylesheet" href="{{ asset ('css/animate.css') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/owl.carousel.min.css')}}">
-		<!-- font awesome CSS -->
+				rel="stylesheet" href="{{ asset ('css/owl.carousel.min.css') }}">
+
+		<link rel="stylesheet" href="{{ asset ('css/all.css') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/all.css')}}">
-		<!-- flaticon CSS -->
-		<link rel="stylesheet" href="{{ asset ('css/flaticon.css')}}">
+				rel="stylesheet" href="{{ asset ('css/flaticon.css') }}">
 		<link
-		rel="stylesheet" href="{{ asset ('css/themify-icons.css')}}">
-		<!-- font awesome CSS -->
+				rel="stylesheet" href="{{ asset ('css/themify-icons.css') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/magnific-popup.css')}}">
-		<!-- swiper CSS -->
+				rel="stylesheet" href="{{ asset ('css/magnific-popup.css') }}">
+
 		<link
-		rel="stylesheet" href="{{ asset ('css/slick.css')}}">
-		<!-- style CSS -->
-		<link rel="stylesheet" href="{{ asset ('css/style.css')}}">
+				rel="stylesheet" href="{{ asset ('css/slick.css') }}">
+
+		<link rel="stylesheet" href="{{ asset ('css/style.css') }}">
 	</head>
-
-	<body>
-		<!--::header part start::-->
-		{% block header %}
-
-			<header class="main_menu home_menu">
-				<div class="container">
-					<div class="row align-items-center justify-content-center">
-						<div class="col-lg-12">
-							<nav class="navbar navbar-expand-lg navbar-light">
-								<a class="navbar-brand" href="{{ path ('index.html')}}">
-									<img src="{{ asset ('img/logo.png')}}" alt="logo">
-								</a>
-								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+{% endblock %}
+	{% block header %}
+		<body>
+		<header class="main_menu home_menu">
+			<div class="container">
+				<div class="row align-items-center justify-content-center">
+					<div class="col-lg-12">
+						<nav class="navbar navbar-expand-lg navbar-light">
+							<a class="navbar-brand" href="{{ path ('pirate') }}">
+								<img src="{{ asset ('img/logo.png') }}" alt="logo">
+							</a>
+							<button class="navbar-toggler" type="button" data-toggle="collapse"
+									data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+									aria-expanded="false" aria-label="Toggle navigation">
 									<span class="menu_icon">
 										<i class="fas fa-bars"></i>
 									</span>
-								</button>
+							</button>
 
-								<div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-									<ul class="navbar-nav">
-										<li class="nav-item">
-											<a class="nav-link" href="{{ path ('index.html')}}">Accueil</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" href="{{ path ('about.html')}}">a propos</a>
-										</li>
-										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-												produits
-											</a>
-											<div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-												<a class="dropdown-item" href="{{ asset ('product_list.html')}}">
-													liste de produits</a>
-												<a class="dropdown-item" href="{{ asset ('single-product.html')}}">Détails des produits</a>
-											</div>
-										</li>
-										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-												pages
-											</a>
-											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-												<a class="dropdown-item" href="{{ path ('login.html')}}">
-													S'enregistrer
+							<div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+								<ul class="navbar-nav">
+									<li class="nav-item">
+										<a class="nav-link" href="{{ path ('pirate') }}">Accueil</a>
+									</li>
+									<li class="nav-item">
+										{#	<a class="nav-link" href="{{ path ('about.html')}}">a propos</a>#}
+									</li>
+									<li class="nav-item dropdown">
+										{#	<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> </a>#}
+										produits
 
-												</a>
-												<a class="dropdown-item" href="{{ path ('checkout.html')}}">Panier</a>
-												<a class="dropdown-item" href="{{ path ('cart.html')}}">Mes achats</a>
-												<a class="dropdown-item" href="{{ path ('confirmation.html')}}">Confirmer</a>
-												<a class="dropdown-item" href="{{ path ('elements.html')}}">elements</a>
-											</div>
-										</li>
-										<li class="nav-item dropdown">
-											<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-												Agenda
-											</a>
-											<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-												<a class="dropdown-item" href="{{ path ('blog.html')}}">
-													Agenda</a>
-												<a class="dropdown-item" href="{{ path ('single-blog.html')}}">Commentaires</a>
-											</div>
-										</li>
+										<div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+											<a class="dropdown-item" href="{{ path ('produits') }}">
+												liste de produits</a>
+
+										</div>
+									</li>
+									<li class="nav-item dropdown">
+										{# <a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>#}
+										pages
+
+										<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+											{#	<a class="dropdown-item" href="{{ path ('login.html')}}"></a> #}
+											S'enregistrer
 
 
-										<li class="nav-item">
-											<a class="nav-link" href="{{ path ('contact.html')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-								<div class="hearer_icon d-flex align-items-center">
-									<a id="search_1" href="{{ asset ('javascript:void(0)')}}">
-										<i class="ti-search"></i>
-									</a>
-									<a href="{{ path ('cart.html')}}">
-										<i class="flaticon-shopping-cart-black-shape"></i>
-									</a>
-								</div>
-							</nav>
-						</div>
+											<a class="dropdown-item" href="{{ path ('panier_index') }}">Panier</a>
+											<a class="dropdown-item" href="{{ path ('produits') }}">Mes achats</a>
+											{#	<a class="dropdown-item" href="{{ path ('confirmation.html')}}">Confirmer</a>#}
+											{#	<a class="dropdown-item" href="{{ path ('elements.html')}}">elements</a>#}
+										</div>
+									</li>
+									<li class="nav-item dropdown">
+										{#<a class="nav-link dropdown-toggle" href="{{ path ('blog.html')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> </a>#}
+										Agenda
+
+										<div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+											{#<a class="dropdown-item" href="{{ path ('blog.html')}}"></a>#}
+											Agenda
+											{#<a class="dropdown-item" href="{{ path ('single-blog.html')}}">Commentaires</a>#}
+										</div>
+									</li>
+
+
+									<li class="nav-item">
+										{#	<a class="nav-link" href="{{ path ('contact.html')}}">Contact</a>#}
+									</li>
+								</ul>
+							</div>
+							<div class="hearer_icon d-flex align-items-center">
+								<a id="search_1" href="{{ asset ('javascript:void(0)') }}">
+									<i class="ti-search"></i>
+								</a>
+								<a href="{{ path ('panier_index') }}">
+									<i class="flaticon-shopping-cart-black-shape"></i>
+								</a>
+							</div>
+						</nav>
 					</div>
-				</body>
-			</html>
+				</div>
+			</div>
+		</header>
 		</body>
-	</html>
-</div>
-<div class="search_input" id="search_input_box">
-	<div class="container ">
-		<form class="d-flex justify-content-between search-inner">
-			<input type="text" class="form-control" id="search_input" placeholder="Search Here">
-			<button type="submit" class="btn"></button>
-			<span class="ti-close" id="close_search" title="Close Search"></span>
-		</form>
-	</div>
-</div>
-</body>
-</html>
-</header>
-<!-- Header part end-->
-{% endblock %}
+		<div class="search_input" id="search_input_box">
+
+			<div class="container ">
+				<form class="d-flex justify-content-between search-inner">
+					<label for="search_input"></label>
+					<input type="text" class="form-control" id="search_input" placeholder="Search Here">
+					<button type="submit" class="btn"></button>
+					<span class="ti-close" id="close_search" title="Close Search"></span>
+				</form>
+			</div>
+		</div>
+
+	{% endblock %}
 {% block main %}
 
     <!-- breadcrumb part start-->
@@ -170,12 +165,12 @@
                                 Please Sign in now</h3>
                             <form class="row contact_form" action="#" method="post" novalidate="novalidate">
                                 <div class="col-md-12 form-group p_star">
-                                    <input type="text" class="form-control" id="name" name="name" value=""
-                                        placeholder="Username">
+									<label for="name"></label><input type="text" class="form-control" id="name" name="name" value=""
+																	 placeholder="Username">
                                 </div>
                                 <div class="col-md-12 form-group p_star">
-                                    <input type="password" class="form-control" id="password" name="password" value=""
-                                        placeholder="Password">
+									<label for="password"></label><input type="password" class="form-control" id="password" name="password" value=""
+																		 placeholder="Password">
                                 </div>
                                 <div class="col-md-12 form-group">
                                     <div class="creat_account d-flex align-items-center">
@@ -198,105 +193,106 @@
 
 {% endblock %}
 {% block footer %}
-<!--::footer_part start::-->
-<footer class="footer_part">
-<div class="footer_iner">
-<div class="container">
-<div class="row justify-content-between align-items-center">
-	<div class="col-lg-8">
-		<div class="footer_menu">
-			<div
-				class="footer_logo">
-				<!-- <a href="{{ path ('index.html')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a> -->
-			</div>
-			<div class="footer_menu_item">
-				<a href="{{ path ('index.html')}}">Accueil</a>
-				<a href="{{ path ('about.html')}}">A propos</a>
-				<a href="{{ path ('product_list.html')}}">Produits</a>
-				<a href="{{ asset ('#')}}">Pages</a>
-				<a href="{{ path ('blog.html')}}">Agenda</a>
-				<a href="{{ path ('contact.html')}}">Contact</a>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-4">
-		<div class="social_icon">
-			<a href="{{ asset ('#')}}">
-				<i class="fab fa-facebook-f"></i>
-			</a>
-			<a href="{{ asset ('#')}}">
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="{{ asset ('#')}}">
-				<i class="fab fa-google-plus-g"></i>
-			</a>
-			<a href="{{ asset ('#')}}">
-				<i class="fab fa-linkedin-in"></i>
-			</a>
-		</div>
-	</div>
-</div>
-</div>
-</div>
-<div class="copyright_part">
-<div class="container">
-<div class="row ">
-	<div class="col-lg-12">
-		<div class="copyright_text">
-			<P>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				Copyright &copy;<script>
-					document.write(new Date().getFullYear());
-				</script>
-				All rights reserved | 
-				<i class="ti-heart" aria-hidden="true"></i>
-				<a href="{{ asset ('https://colorlib.com')}}" target="_blank">Adame, Dounia, Bryan et Guillaume</a>
-				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			</P>
-			<div class="copyright_link">
-				<a href="{{ asset ('#')}}">Thermes et conditions</a>
-				<a href="{{ asset ('#')}}">FAQ</a>
+
+	<footer class="footer_part">
+		<div class="footer_iner">
+			<div class="container">
+				<div class="row justify-content-between align-items-center">
+					<div class="col-lg-8">
+						<div class="footer_menu">
+							<div
+									class="footer_logo">
+								<a href="{{ path ('pirate') }}"><img src="{{ asset ('img/logo.png') }}" alt="#"></a> -->
+							</div>
+							<div class="footer_menu_item">
+								<a href="{{ path ('pirate') }}">Accueil</a>
+								{#<a href="{{ path ('about.html')}}">A propos</a>#}
+								<a href="{{ path ('produits') }}">Produits</a>
+								{#<a href="{{ asset ('#')}}">Pages</a>#}
+								{#<a href="{{ path ('blog.html')}}">Agenda</a>#}
+								{#<a href="{{ path ('contact.html')}}">Contact</a>#}
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="social_icon">
+							<a href="{{ asset ('#') }}">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a href="{{ asset ('#') }}">
+								<i class="fab fa-instagram"></i>
+							</a>
+							<a href="{{ asset ('#') }}">
+								<i class="fab fa-google-plus-g"></i>
+							</a>
+							<a href="{{ asset ('#') }}">
+								<i class="fab fa-linkedin-in"></i>
+							</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
-</div>
-</div>
-</footer>
-<!--::footer_part end::-->
+		<div class="copyright_part">
+			<div class="container">
+				<div class="row ">
+					<div class="col-lg-12">
+						<div class="copyright_text">
+							<P>
+
+								Copyright &copy;<script>
+									document.write(new Date().getFullYear());
+								</script>
+								All rights reserved |
+								<i class="ti-heart" aria-hidden="true"></i>
+								<a href="{{ asset ('https://colorlib.com') }}" target="_blank">Adame, Dounia, Bryan et
+									Guillaume</a>
+
+							</P>
+							<div class="copyright_link">
+								<a href="{{ asset ('#') }}">Thermes et conditions</a>
+								<a href="{{ asset ('#') }}">FAQ</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 {% endblock %}
 {% block javascript %}
-<!-- jquery plugins here-->
-<script src="{{ asset ('js/jquery-1.12.1.min.js')}}">
-</script>
-<!-- popper js -->
-<script src="{{ asset ('js/popper.min.js')}}">
-</script><!-- bootstrap js -->
-<script src="{{ asset ('js/bootstrap.min.js')}}">
-</script><!-- magnific popup js -->
-<script src="{{ asset ('js/jquery.magnific-popup.js')}}">
-</script><!-- carousel js -->
-<script src="{{ asset ('js/owl.carousel.min.js')}}">
-</script><script src="{{ asset ('js/jquery.nice-select.min.js')}}">
-</script><!-- slick js --><script src="{{ asset ('js/slick.min.js')}}">
-</script>
-<script src="{{ asset ('js/jquery.counterup.min.js')}}">
-</script>
-<script src="{{ asset ('js/waypoints.min.js')}}">
-</script>
-<script src="{{ asset ('js/contact.js')}}">
-</script>
-<script src="{{ asset ('js/jquery.ajaxchimp.min.js')}}">
-</script>
-<script src="{{ asset ('js/jquery.form.js')}}">
-</script>
-<script src="{{ asset ('js/jquery.validate.min.js')}}">
-</script>
-<script src="{{ asset ('js/mail-script.js')}}">
-</script>
-<!-- custom js -->
-<script src="{{ asset ('js/custom.js')}}">
-</script>
 
-</body>
-{% endblock %}
+	<
+	script
+	src = "{{ asset ('js/jquery-1.12.1.min.js') }}">
+
+
+
+	<script src="{{ asset ('js/popper.min.js') }}"></script>
+
+	<script src="{{ asset ('js/bootstrap.min.js') }}"></script>
+
+	<script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
+
+	<script src="{{ asset ('js/owl.carousel.min.js') }}"></script>
+	<script src="{{ asset ('js/jquery.nice-select.min.js') }}"></script>
+	<script src="{{ asset ('js/slick.min.js') }}"></script>
+
+	<script src="{{ asset ('js/jquery.counterup.min.js') }}"></script>
+
+	<script src="{{ asset ('js/waypoints.min.js') }}"></script>
+
+	<script src="{{ asset ('js/contact.js') }}"></script>
+
+	<script src="{{ asset ('js/jquery.ajaxchimp.min.js') }}"></script>
+
+	<script src="{{ asset ('js/jquery.form.js') }}"></script>
+
+	<script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
+
+	<script src="{{ asset ('js/mail-script.js') }}"></script>
+
+	<script src="{{ asset ('js/custom.js') }}"></script>
+
+{% endblock %}block %}
