--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -44,7 +44,7 @@
                             <td>{{ item.produits.image }}</td>
                             <td>{{ item.produits.description }}</td>
                             <td>{{ item.produits.prix }}</td>
-                            <td>{{ item.quantity }}</td>
+                            <td class"test">{{ item.quantity }}</td>
                             <td>{{ item.produits.prix * item.quantity }}</td>
                             <td>
                                 <a href="{{ path('panier_subtract', {'id': item.produits.id}) }}" class="btn">Enlever un article</a>
@@ -66,9 +66,13 @@
                 </tr>
             </tfoot>
         </table>
+        <div>
+            <a href="{{ path('command') }}" class="btn">Commandez</a>
+        </div>
     {% else %}
         <p>Votre panier est vide</p>
     {% endif %}
 
 {% endblock %}
+
 </html>
