problèmes route toujours

--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,5 +1,5 @@
 
-
+{% extends "base.html.twig" %}
  {% block title %}
  <title>
  Welcome!
@@ -110,11 +110,7 @@
 </div>
 </header>
 {% endblock %}
-         
-  
-
 {% block body %}
-
     <div>
         <h1>Votre panier</h1>
     </div>
