--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -407,18 +407,23 @@
                 <div class="row ">
                     <div class="col-lg-12">
                         <div class="copyright_text">
+                         <div class="map">
+
+                           
                             <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="{{ asset ('https://colorlib.com')}}" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="{{ asset ('https://colorlib.com')}}" target="_blank"></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
+<iframe src="https://www.google.com/maps/d/embed?mid=1_CEo7EOWczuCUG27YS8OBerIaP-uBPXC" width="640" height="480"></iframe>
                             <div class="copyright_link">
                                 <a href="{{ asset ('#')}}">Turms & Conditions</a>
-                                <a href="{{ asset ('#')}}">FAQ</a>
-                            </div>
+                                <a href="{{ asset ('#')}}">FAQ</a>  
+                            </div>                          
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </footer>
     <!--::footer_part end::-->
 {% endblock %}
