front panier, produits & command

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{{ asset ('css/magnific-popup.css') }}">
         <link rel="stylesheet" href="{{ asset ('css/slick.css') }}">
         <link rel="stylesheet" href="{{ asset ('css/style.css') }}">
+        
     </head>
 {% endblock %}
 {% block header %}
@@ -365,6 +366,12 @@
                                             <div class="copyright_text">                    
                                                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous droits réservés | Site par Adame, Dounia, Bryan et Guillaume <i class="ti-heart" aria-hidden="true"></i></a>
                                                 <div class="copyright_link">
+                                                <iframe id="inlineFrameExample"
+    title="Inline Frame Example"
+    width="100"
+    height="100"
+    src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+</iframe>
                                                {# <iframe src="https://www.google.com/maps/d/embed?mid=1_CEo7EOWczuCUG27YS8OBerIaP-uBPXC" width="640" height="480"></iframe> #}
                                                     <a href="#">Conditions d'utilisations</a>
                                                     <a href="#">FAQ</a>
@@ -378,6 +385,7 @@
 {% endblock %}
 {% block javascript %}
 <script src="{{asset('js/jquery-1.12.1.min.js')}}"><script>
+<script src="{{asset('js/scriptform.js')}}"><script>
 <script src="{{ asset ('js/popper.min.js') }}"></script>
 <script src="{{ asset ('js/bootstrap.min.js') }}"></script>
 <script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
@@ -392,4 +400,5 @@
 <script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
 <script src="{{ asset ('js/mail-script.js') }}"></script>
 <script src="{{ asset ('js/custom.js') }}"></script>
+<script src="{{ asset ('js/scriptproduits.js') }}"></script>
 {% endblock %}
