--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,62 +1,118 @@
+{% extends 'base.html.twig' %}
 
-
-{% extends "base.html.twig" %}
-        
-        
-        
 {% block main %}
+  <div>
+    <h1>
+      Votre panier
+    </h1>
+  </div>
+
+  {% if (items|length) > 0 %}
+    <table class="table">
+      <thead>
+        <tr>
+          <th>
+            Produit
+          </th>
+          <th>
+            Image
+          </th>
+          <th>
+            Déscription
+          </th>
+          <th>
+            Prix
+          </th>
+          <th>
+            Quantité
+          </th>
+          <th>
+            Total
+          </th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in items %}
+          <tr>
+            <td>
+              {{ item.produits.nom }}
+            </td>
+            <td>
+              <img class="imgpanier"
+                src="{{ asset('img/') }}{{ item.produits.image }}" />
+            </td>
+            <td>
+              {{ item.produits.description }}
+            </td>
+            <td>
+              {{ item.produits.prix }}
+            </td>
+            <td>
+              {{ item.quantity }}
+            </td>
+            <td>
+              {{ item.produits.prix * item.quantity }}
+            </td>
+            <td>
+              <a href="{{
+                path(
+                  'panier_subtract',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn">
+                <img src="{{ asset('img/moins.png') }}" />
+              </a>
+
+              <a href="{{
+                path(
+                  'panier_add',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn">
+                <img src="{{ asset('img/plus.png') }}" />
+              </a>
+            </td>
+            <td>
+              <a href="{{
+                path(
+                  'panier_remove',
+                  {
+                    id: item.produits.id
+                  }
+                )
+                }}"
+                class="btn btn-danger btn-sm">
+                <i class="fas fa-trash"></i>
+              </a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="5">
+            Total :
+          </td>
+          <td>
+            {{ totalPrice }}
+          </td>
+          <td></td>
+        </tr>
+      </tfoot>
+    </table>
     <div>
-        <h1>Votre panier</h1>
+      <a href="{{ path('command') }}" class="btn">Commandez</a>
     </div>
-    
-  
-    {% if items | length > 0 %}
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Produit</th>
-                    <th>Image</th>
-                    <th>Déscription</th>
-                    <th>Prix</th>
-                    <th>Quantité</th>
-                    <th>Total</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in items %}
-                    <tr>
-                        <td>{{ item.produits.nom }}</td>
-                        <td> <img class="imgpanier" src="{{asset('img/')}}{{item.produits.image}}"/> </td>
-                        <td>{{ item.produits.description }}</td>
-                        <td>{{ item.produits.prix }}</td>
-                        <td>{{ item.quantity }}</td>
-                        <td>{{ item.produits.prix * item.quantity }}</td>
-                        <td>
-                            <a href="{{ path('panier_subtract', {'id': item.produits.id}) }}" class="btn" > <img src="{{ asset ('img/moins.png') }}"/> </a>
-
-                            <a href="{{ path('panier_add', {'id': item.produits.id}) }}" class="btn"><img src="{{ asset ('img/plus.png') }}"/></a>
-
-                        </td>
-                        <td>
-                            <a href="{{ path('panier_remove', {'id': item.produits.id}) }}" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash"></i>
-                            </a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="5">Total : </td>
-                    <td>{{ totalPrice }}</td>
-                    <td></td>
-                </tr>
-            </tfoot>
-        </table>
-    {% else %}
-        <p>Votre panier est vide</p>
-    {% endif %}
-
+  {% else %}
+    <p>
+      Votre panier est vide
+    </p>
+  {% endif %}
 {% endblock %}
-                    
