--- a/templates/formulaire/index.html.twig
+++ b/templates/formulaire/index.html.twig
@@ -1,42 +1,40 @@
 {% extends "base.html.twig" %}
-{% block title %}Hello FormulaireController!{% endblock %}
 
 {% block main %}
+<div id="section">
 
-<section class="breadcrumb_part">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner">
-                        <h2>Contact</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+				<section class="contact-wrap">
+				  <form action="{{ path ('send')}}" class="contact-form" method="post">
+					<div class="col-sm-6">
+					  <div class="input-block">
+						<label for="">Prénom</label>
+						<input type="text" class="form-control">
+					  </div>
+					</div>
+					<div class="col-sm-6">
+					  <div class="input-block">
+						<label for="">Nom</label>
+						<input type="text" class="form-control">
+					  </div>
+					</div>
+					<div class="col-sm-12">
+					  <div class="input-block">
+						<label for="">Email</label>
+						<input type="text" class="form-control">
+					  </div>
+					</div>
+				
+					<div class="col-sm-12">
+					  <div class="input-block textarea">
+						<label for="">Votre message </label>
+						<textarea rows="3" type="text" class="form-control"></textarea>
+					  </div>
+					</div>
+					<div class="col-sm-12">
+					  <button class="square-button">Envoyer</button>
+					</div>
+				  </form>
+				</section>
 
-<form class="formu" action={{ path('send')}} method="post">
-<div class="container">
-<div class="col-md-4 form-group">
-                   <label for="nom">Entrez votre nom</label>
-                   <input type="text" class="form-control" name="nom" id="nom" placeholder="" required>
-                 </div>
-                 <div class="col-md-4 form-group">
-                   <label for="prenom">Entrez votre prenom</label>
-                   <input type="text" class="form-control" name="prenom" id="nom" placeholder=""  required>
-                 </div>
-  <div class="col-md-4 form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" required>
-    <small id="emailHelp" class="form-text text-muted">Nous ne partagerons pas votre adresse, promis !</small>
-  </div>
-
-  <div class="col-md-7 form-group">
-    <label for="exampleFormControlTextarea1">Laissez nous un commentaire !</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" name="commentaire" rows="3" required></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">Valider</button>
-  </div>
-</form>
-
+</div>
 {% endblock %}
