--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,15 +37,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{{ path ('pirate')}}">A propos</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="{{ path ('produits')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path ('produits')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Produits
                                     </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="{{ path ('produits')}}"> Liste produits</a>
-                                        <a class="dropdown-item" href="{{ path ('produits')}}">Details des produits</a>
-
-                                    </div>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -57,20 +52,12 @@
                                         </a>
                                         <a class="dropdown-item" href="{{ path ('pirate')}}">Renvoyer un produit</a>
                                         <a class="dropdown-item" href="{{ path ('panier_index')}}">Mon panier</a>
-                                        <a class="dropdown-item" href="{{ path ('pirate')}}">Confirmation</a>
+                                        <a class="dropdown-item" href="{{ path ('command')}}">Confirmation</a>
                                     </div>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        blog
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="{{ path ('pirate')}}"> blog</a>
-                                        <a class="dropdown-item" href="{{ path ('pirate')}}">Single blog</a>
-                                    </div>
-                                </li>
+                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path ('pirate')}}">Contact</a>
+                                    <a class="nav-link" href="{{ path ('formulaire')}}">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -332,7 +319,7 @@
                             <label>
                                 <input type="email" placeholder="Entre ton mail">
                             </label>
-                            <a href="{{ asset ('#" class="btn_1') }}"> Envoyer </a>
+                            <a class="btn btn-1 btn-lg active" href="{{ asset ('#')}}" > Envoyer </a>
                         </div>
                     </div>
                 </div>
@@ -352,8 +339,7 @@
                                 document.write(new Date().getFullYear());
                             </script> Tous droits réservés | Site par Adame, Dounia, Bryan et Guillaume <i class="ti-heart" aria-hidden="true"></i></a>
                             <div class="copyright_link">
-                                <iframe id="inlineFrameExample" title="Inline Frame Example" width="100" height="100" src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
-                                </iframe> {# <iframe src="https://www.google.com/maps/d/embed?mid=1_CEo7EOWczuCUG27YS8OBerIaP-uBPXC" width="640" height="480"></iframe> #}
+                               %
                                 <a href="#">Conditions d'utilisations</a>
                                 <a href="#">FAQ</a>
                             </div>
