--- a/templates/formulaire/index.html.twig
+++ b/templates/formulaire/index.html.twig
@@ -1,40 +1,97 @@
 {% extends "base.html.twig" %}
-
 {% block main %}
-<div id="section">
+<section class="contact-section section_padding">
+    <div class="container">
+        <div class="d-none d-sm-block mb-5 pb-4">
+            <div id="map" style="height: 480px;"></div>
+            <script>
+                function initMap() {
+                    var uluru = {
+                        lat: -25.363,
+                        lng: 131.044
+                    };
+                    var grayStyles = [{
+                        featureType: "all",
+                        stylers: [{
+                            saturation: -90
+                        }, {
+                            lightness: 50
+                        }]
+                    }, {
+                        elementType: 'labels.text.fill',
+                        stylers: [{
+                            color: '#ccdee9'
+                        }]
+                    }];
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                        center: {
+                            lat: -31.197,
+                            lng: 150.744
+                        },
+                        zoom: 9,
+                        styles: grayStyles,
+                        scrollwheel: false
+                    });
+                }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
+            </script>
 
-				<section class="contact-wrap">
-				  <form action="{{ path ('send')}}" class="contact-form" method="post">
-					<div class="col-sm-6">
-					  <div class="input-block">
-						<label for="">Prénom</label>
-						<input type="text" class="form-control">
-					  </div>
-					</div>
-					<div class="col-sm-6">
-					  <div class="input-block">
-						<label for="">Nom</label>
-						<input type="text" class="form-control">
-					  </div>
-					</div>
-					<div class="col-sm-12">
-					  <div class="input-block">
-						<label for="">Email</label>
-						<input type="text" class="form-control">
-					  </div>
-					</div>
-				
-					<div class="col-sm-12">
-					  <div class="input-block textarea">
-						<label for="">Votre message </label>
-						<textarea rows="3" type="text" class="form-control"></textarea>
-					  </div>
-					</div>
-					<div class="col-sm-12">
-					  <button class="square-button">Envoyer</button>
-					</div>
-				  </form>
-				</section>
+        </div>
 
-</div>
+
+        <div class="row">
+            <div class="col-12">
+                <h2 class="contact-title">Tiens nous au jus</h2>
+            </div>
+            <div class="col-lg-8">
+                <form class="form-contact contact_form" action="{{ path ('send')}}" method="post" id="contactForm" novalidate="novalidate">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-group">
+
+                                <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tapez votre message'" placeholder='Tapez votre message'></textarea>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre nom'" placeholder='Entrez votre nom'>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre email'" placeholder='Entrez votre email'>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <input class="form-control" name="subject" id="subject" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Objet'" placeholder='Objet'>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <a href="#" class="btn_3 button-contactForm">Envoyer</a>
+                    </div>
+                </form>
+            </div>
+            <div class="col-lg-4">
+                <div class="media contact-info">
+                    <span class="contact-info__icon"><i class="ti-home"></i></span>
+                    <div class="media-body">
+                        <h3>Paris</h3>
+                        <p>Oberkampf</p>
+                    </div>
+                </div>
+                <div class="media contact-info">
+                    <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+                    <div class="media-body">
+                        <h3>06 18 12 65 88</h3>
+                        <p>Du lundi au dimanche 9h00 - 19h00</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
