page contact Ok / bordel dans panier

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,9 +38,7 @@
                                     <a class="nav-link" href="{{ path ('pirate')}}">A propos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ path ('produits')}}" id="navbarDropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Produits
-                                    </a>
+                                    <a class="nav-link" href="{{ path ('produits')}}">Produits </a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
