--- a/templates/panier/index2.html.twig
+++ b/templates/panier/index2.html.twig
@@ -1,237 +1,88 @@
 {% extends "base.html.twig" %}
-{% block head %}
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>L'arômes des sens</title>
-        <link rel="icon" href="{{ asset ('img/tree.png') }}">
-        <link rel="stylesheet" href="{{ asset ('css/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/animate.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/owl.carousel.min.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/all.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/flaticon.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/themify-icons.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/magnific-popup.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/slick.css') }}">
-        <link rel="stylesheet" href="{{ asset ('css/style.css') }}">
-    </head>
-{% endblock %}
-{% block header %}
-    <body>
-        <header class="main_menu home_menu">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-lg-12">
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="{{ path ('pirate')}}"> <img src="{{ asset ('img/logo.png')}}" alt="logo"> </a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="menu_icon">
-                                <i class="fas fa-bars"></i>
-                            </span>
-                        </button>
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{{ path ('pirate')}}">Accueil</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{{ path ('pirate')}}">A propos</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_1"
-                                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Produits
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                    <a class="dropdown-item" href="{{ path ('produits')}}"> Liste produits</a>
-                                    <a class="dropdown-item" href="{{ path ('pirate')}}">Details des produits</a>
-                                    
-                                </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_3"
-                                role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Pages
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                <a class="dropdown-item" href="{{ path ('pirate')}}"> 
-                                    Se connecter        
-                                </a>
-                                <a class="dropdown-item" href="{{ path ('pirate')}}">Renvoyer un produit</a>
-                                <a class="dropdown-item" href="{{ path ('panier_index')}}">Mon panier</a>
-                                <a class="dropdown-item" href="{{ path ('pirate')}}">Confirmation</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="{{ path ('pirate')}}" id="navbarDropdown_2"
-                            role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            blog
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                            <a class="dropdown-item" href="{{ path ('pirate')}}"> blog</a>
-                            <a class="dropdown-item" href="{{ path ('pirate')}}">Single blog</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path ('pirate')}}">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="hearer_icon d-flex align-items-center">
-                <a id="search_1" href="{{ asset ('javascript:void(0)')}}"><i class="ti-search"></i></a>
-                <a href="cart.html">
-                    <i class="flaticon-shopping-cart-black-shape"></i>
-                </a>
-            </div>
-        </nav>
-    </div>
-</div>
-</div>
-<div class="search_input" id="search_input_box">
-    <div class="container ">
-        <form class="d-flex justify-content-between search-inner">
-            <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-            <button type="submit" class="btn"></button>
-            <span class="ti-close" id="close_search" title="Close Search"></span>
-        </form>
-    </div>
-</div>
-</header>
-{% endblock %}
 {% block main %}
 
-    <section class="breadcrumb_part">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner">
-                        <h2>cart list</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+<section class="cart_area section_padding">
     <div class="container">
-        {% if items | length > 0 %}
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Produit</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Prix</th>
-                        <th scope="col">Quantité</th>
-                        <th scope="col">Total</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in items %}
-                        {% if  item.produits is not null %}
+        <div class="cart_inner">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        {% if (items|length) > 0 %}
                             <tr>
-                                <td>{{ item.produits.nom }}</td>
-                                <td>{{ item.produits.image }}</td>
-                                <td>{{ item.produits.description }}</td>
-                                <td>{{ item.produits.prix }}</td>
+                                <th scope="col">Produits</th>
+                                <th scope="col">Prix</th>
+                                <th scope="col">Quantité</th>
+                                <th scope="col">Total</th>
+                            </tr>
+                    </thead>
+                    <tbody>
+                        {% for item in items %}
+                            <tr>
                                 <td>
-                                    {{ item.quantity }}
-                                    <div class="product_count">
-                                      <span class="input-number-decrement"> 
-                                          <i class="ti-minus">
-                                          </i>
-                                      </span>
-                                      <input class="input-number" type="text" value="1" min="0" max="10">
-                                      <span class="input-number-increment"> <i class="ti-plus">
-                                      </i>
-                                  </span>
-                              </div>
-                          </td>
-                          <td>{{ item.produits.prix * item.quantity }}
-                          </td>
-                          <td>
-                            <a href="{{ path('panier_subtract', {'id': item.produits.id})}}" class="btn">Enlever un article</a>
-                        </td>
-                        <td>
-                            <a href="{{ path('panier_remove', {'id': item.produits.id})}}" class="btn btn-danger btn-sm">
-                                <i class="fas fa-trash"></i>
-                            </a>
-                        </td>
-                    </tr>
-                {% endif %}
-            {% endfor %}
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="5">Total : </td>
-                <td>{{ totalPrice }}</td>
-                <td></td>
-            </tr>
-        </tfoot>
-    </table>
-{% else %}
-    <p>Votre panier est vide</p>
-</div>
-{% endif %}
+                                {{ item.produits.nom }}
+                                </td>
+                                <td>
+                                    <div class="media">
+                                        <div class="d-flex">
+                                            <img src="{{ asset('img/') }}{{ item.produits.image }}" />
+                                        </div>
+                                            <div class="media-body">
+                                                <p>{{ item.produits.description }}</p>
+                                            </div>
+                                        </div>
+                                            <div class="product_count">
+                                                <span class="input-number-decrement">
+                                                    <i class="ti-minus">
+                                                        <a href="{{ path('panier_remove', {id: item.produits.id})}}"></a>
+                                                        </i>
+                                                </span>
+                                                <input class="input-number" type="text" value="1" min="0" max="10">
+                                                <span class="input-number-increment">
+                                                    <i class="ti-plus">
+                                                    <a href="{{ path('panier_add',{id: item.produits.id})}}"></a>
+                                                    </i>
+                                                </span>
+                                            </div>
+                                </td>
+                            <td>
+                                <h5>{{ item.produits.prix }}</h5>
+                            </td>
 
+                        </tr>
+                        <tr class="bottom_button">
+                            <td>
+                                <a class="btn_1" href="#">Update Cart</a>
+                            </td>
+                            <td>
+                            {% else %}
+                            </td>
+                            
+                            <td>
+                                <div class="cupon_text float-right">
+                                    <a class="btn_1" href="#">Close Coupon</a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            {% endfor %}
+                            <td>
+                                <h5>Total</h5>
+                            </td>
+                            <td>
+                                <h5>{{ totalPrice }}</h5>
+                            </td>
+                        </tr>
+                        
+                    </tbody>
+                </table>
+                <div class="checkout_btn_inner float-right">
+                    <a class="btn_1" href="#">Continuez vos achats</a>
+                    <a class="btn_1 checkout_btn_1" href="{{ path('command') }}">Commandez</a>
+                </div>
+                
+            </div>
+            {% endif %}
+        </div>
+</section>
 
 {% endblock %}
-{% block footer %}
-    <footer class="footer_part">
-        <div class="footer_iner">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
-                    <div class="col-lg-8">
-                        <div class="footer_menu">
-                            <div class="footer_logo">
-                                <a href="{{ path ('pirate')}}"><img src="{{ asset ('img/logo.png')}}" alt="#"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="social_icon">
-                            <a href="{{('#')}}"><i class="fab fa-facebook-f"></i></a>
-                            <a href="{{('#')}}"><i class="fab fa-instagram"></i></a>
-                            <a href="{{('#')}}"><i class="fab fa-google-plus-g"></i></a>
-                            <a href="{{('#')}}"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copyright_part">
-            <div class="container">
-                <div class="row ">
-                    <div class="col-lg-12">
-                        <div class="copyright_text">                    
-                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Site par Adame, Dounia, Bryan et Guillaume <i class="ti-heart" aria-hidden="true"></i></a>
-                            <div class="copyright_link">
-                                <a href="#">Turms & Conditions</a>
-                                <a href="#">FAQ</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-{% endblock %}
-{% block javascript %}
-    <script
-    src = "{{ asset ('js/jquery-1.12.1.min.js') }}">
-    <script src="{{ asset ('js/popper.min.js') }}"></script>
-    <script src="{{ asset ('js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset ('js/jquery.magnific-popup.js') }}"></script>
-    <script src="{{ asset ('js/owl.carousel.min.js') }}"></script>
-    <script src="{{ asset ('js/jquery.nice-select.min.js') }}"></script>
-    <script src="{{ asset ('js/slick.min.js') }}"></script>
-    <script src="{{ asset ('js/jquery.counterup.min.js') }}"></script>
-    <script src="{{ asset ('js/waypoints.min.js') }}"></script>
-    <script src="{{ asset ('js/contact.js') }}"></script>
-    <script src="{{ asset ('js/jquery.ajaxchimp.min.js') }}"></script>
-    <script src="{{ asset ('js/jquery.form.js') }}"></script>
-    <script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
-    <script src="{{ asset ('js/mail-script.js') }}"></script>
-    <script src="{{ asset ('js/custom.js') }}"></script>
-    {% endblock %}
