--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -363,5 +363,5 @@
     <script src="{{ asset ('js/jquery.validate.min.js') }}"></script>
     <script src="{{ asset ('js/mail-script.js') }}"></script>
     <script src="{{ asset ('js/custom.js') }}"></script>
-    <script src="{{ asset ('js/scriptproduits.js') }}"></script>
+    <script src="{{ asset ('js/scriptcommand.js') }}"></script>
     {% endblock %}
