--- a/public/sass/_confirmation_part.scss
+++ b/public/sass/_confirmation_part.scss
@@ -1,73 +1,357 @@
 /************** confirmation part css **********************/
-.confirmation_part{
-    .confirmation_tittle{
+
+.confirmation_part {
+    .confirmation_tittle {
         text-align: center;
         margin-bottom: 35px;
-        span{
+        span {
             color: $btn_bg;
-            
         }
     }
-    .single_confirmation_details{
+    .single_confirmation_details {
         background-color: $section_bg;
         padding: 35px 40px;
-        @media #{$tab}{
+        @media #{$tab} {
             margin-bottom: 15px;
         }
-        @media #{$medium_device}{
+        @media #{$medium_device} {
             margin-bottom: 30px;
         }
-        h4{
+        h4 {
             font-size: 18px;
             font-weight: 500;
             color: $font_2;
             text-transform: capitalize;
             margin-bottom: 16px;
         }
-        ul{
-            li{
+        ul {
+            li {
                 position: relative;
                 text-transform: capitalize;
-                
                 padding-left: 55%;
                 margin-bottom: 3px;
-                p{
+                p {
                     position: absolute;
                     left: 0;
                     top: 0;
                     line-height: 21px;
                     color: $font_7;
                 }
-                span{
+                span {
                     color: $font_2;
                 }
             }
         }
     }
-    .order_details_iner{
+    .order_details_iner {
         margin-top: 50px;
         background-color: $section_bg;
         padding: 30px 30px 15px;
         text-transform: capitalize;
-        h3{
+        h3 {
             font-size: 18px;
         }
-        .table thead th{
-           color: $font_2;
-           font-size: 16px;
+        .table thead th {
+            color: $font_2;
+            font-size: 16px;
         }
-        span{
+        span {
             color: $font_7;
         }
-        thead{
+        thead {
             border-top: 1px solid $font_d;
             border-bottom: 1px solid $font_d;
         }
-        tfoot{
+        tfoot {
             border-top: 1px solid $font_d;
         }
-        th{
+        th {
             font-weight: 500;
+        }
+    }
+}
+
+@import "compass/css3";
+
+/*
+I wanted to go with a mobile first approach, but it actually lead to more verbose CSS in this case, so I've gone web first. Can't always force things...
+
+Side note: I know that this style of nesting in SASS doesn't result in the most performance efficient CSS code... but on the OCD/organizational side, I like it. So for CodePen purposes, CSS selector performance be damned.
+*/
+
+
+/* Global settings */
+
+$color-border: #eee;
+$color-label: #aaa;
+$font-default: 'HelveticaNeue-Light',
+'Helvetica Neue Light',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
+$font-bold: 'HelveticaNeue-Medium',
+'Helvetica Neue Medium';
+
+/* Global "table" column settings */
+
+.product-image {
+    float: left;
+    width: 20%;
+}
+
+.product-details {
+    float: left;
+    width: 37%;
+}
+
+.product-price {
+    float: left;
+    width: 12%;
+}
+
+.product-quantity {
+    float: left;
+    width: 10%;
+}
+
+.product-removal {
+    float: left;
+    width: 9%;
+}
+
+.product-line-price {
+    float: left;
+    width: 12%;
+    text-align: right;
+}
+
+
+/* This is used as the traditional .clearfix class */
+
+.group:before,
+.group:after {
+    content: '';
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    zoom: 1;
+}
+
+
+/* Apply clearfix in a few places */
+
+.shopping-cart,
+.column-labels,
+.product,
+.totals-item {
+    @extend .group;
+}
+
+
+/* Apply dollar signs */
+
+.product .product-price:before,
+.product .product-line-price:before,
+.totals-value:before {
+    content: '$';
+}
+
+
+/* Body/Header stuff */
+
+body {
+    padding: 0px 30px 30px 20px;
+    font-family: $font-default;
+    font-weight: 100;
+}
+
+h1 {
+    font-weight: 100;
+}
+
+label {
+    color: $color-label;
+}
+
+.shopping-cart {
+    margin-top: -45px;
+}
+
+
+/* Column headers */
+
+.column-labels {
+    label {
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        border-bottom: 1px solid $color-border;
+    }
+    .product-image,
+    .product-details,
+    .product-removal {
+        text-indent: -9999px;
+    }
+}
+
+
+/* Product entries */
+
+.product {
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid $color-border;
+    .product-image {
+        text-align: center;
+        img {
+            width: 100px;
+        }
+    }
+    .product-details {
+        .product-title {
+            margin-right: 20px;
+            font-family: $font-bold;
+        }
+        .product-description {
+            margin: 5px 20px 5px 0;
+            line-height: 1.4em;
+        }
+    }
+    .product-quantity {
+        input {
+            width: 40px;
+        }
+    }
+    .remove-product {
+        border: 0;
+        padding: 4px 8px;
+        background-color: #c66;
+        color: #fff;
+        font-family: $font-bold;
+        font-size: 12px;
+        border-radius: 3px;
+    }
+    .remove-product:hover {
+        background-color: #a44;
+    }
+}
+
+
+/* Totals section */
+
+.totals {
+    .totals-item {
+        float: right;
+        clear: both;
+        width: 100%;
+        margin-bottom: 10px;
+        label {
+            float: left;
+            clear: both;
+            width: 79%;
+            text-align: right;
+        }
+        .totals-value {
+            float: right;
+            width: 21%;
+            text-align: right;
+        }
+    }
+    .totals-item-total {
+        font-family: $font-bold;
+    }
+}
+
+.checkout {
+    float: right;
+    border: 0;
+    margin-top: 20px;
+    padding: 6px 25px;
+    background-color: #6b6;
+    color: #fff;
+    font-size: 25px;
+    border-radius: 3px;
+}
+
+.checkout:hover {
+    background-color: #494;
+}
+
+
+/* Make adjustments for tablet */
+
+@media screen and (max-width: 650px) {
+    .shopping-cart {
+        margin: 0;
+        padding-top: 20px;
+        border-top: 1px solid $color-border;
+    }
+    .column-labels {
+        display: none;
+    }
+    .product-image {
+        float: right;
+        width: auto;
+        img {
+            margin: 0 0 10px 10px;
+        }
+    }
+    .product-details {
+        float: none;
+        margin-bottom: 10px;
+        width: auto;
+    }
+    .product-price {
+        clear: both;
+        width: 70px;
+    }
+    .product-quantity {
+        width: 100px;
+        input {
+            margin-left: 20px;
+        }
+    }
+    .product-quantity:before {
+        content: 'x';
+    }
+    .product-removal {
+        width: auto;
+    }
+    .product-line-price {
+        float: right;
+        width: 70px;
+    }
+}
+
+
+/* Make more adjustments for phone */
+
+@media screen and (max-width: 350px) {
+    .product-removal {
+        float: right;
+    }
+    .product-line-price {
+        float: right;
+        clear: left;
+        width: auto;
+        margin-top: 10px;
+    }
+    .product .product-line-price:before {
+        content: 'Item Total: $';
+    }
+    .totals {
+        .totals-item {
+            label {
+                width: 60%;
+            }
+            .totals-value {
+                width: 40%;
+            }
         }
     }
 }
